NXP-29578: cleanup/format